Sun Mar  6 22:43:41 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_obj_display): [DOC] fix output of Array, as Array#to_s
	  is same as Array#inspect since 1.9.

Sat Mar  5 09:50:58 2016  Rei Odaira  <Rei.Odaira@gmail.com>

	* test/socket/test_addrinfo.rb (test_ipv6_address_predicates):
	  IN6_IS_ADDR_V4COMPAT and IN6_IS_ADDR_V4MAPPED are broken
	  on AIX, so skip related tests.

Sat Mar  5 09:17:54 2016  Rei Odaira  <Rei.Odaira@gmail.com>

	* test/rinda/test_rinda.rb (test_make_socket_ipv4_multicast):
	  The fifth argument to getsockopt(2) should be modified to
	  indicate the actual size of the value on return,
	  but not in AIX. This is a know bug. Skip related tests.
	* test/rinda/test_rinda.rb (test_ring_server_ipv4_multicast):
	  ditto.
	* test/rinda/test_rinda.rb (test_make_socket_unicast): ditto.
	* test/socket/test_basicsocket.rb (test_getsockopt): ditto.
	* test/socket/test_sockopt.rb (test_bool): ditto.

Sat Mar  5 07:36:27 2016  Rei Odaira  <Rei.Odaira@gmail.com>

	* test/-ext-/float/test_nextafter.rb: In AIX,
	  nextafter(+0.0,-0.0)=+0.0, and nextafter(-0.0,+0.0)=-0.0,
	  but they should return -0.0 and +0.0, respectively. This is
	  a known bug in nextafter(3) on AIX, so skip related tests.

Sat Mar  5 07:14:10 2016  Rei Odaira  <Rei.Odaira@gmail.com>

	* test/zlib/test_zlib.rb (test_adler32_combine, test_crc32_combine):
	  Skip two tests on AIX because zconf.h in zlib does not correctly
	  recognize _LARGE_FILES in AIX. The problem was already reported
	  to zlib, and skip these tests until it is fixed.

Sat Mar  5 03:07:40 2016  Rei Odaira  <Rei.Odaira@gmail.com>

	* thread_pthread.c (getstack): __pi_stacksize returned by
	  pthread_getthrds_np() is wrong on AIX. Use
	  __pi_stackend - __pi_stackaddr instead.

Fri Mar  4 19:19:42 2016  Koichi Sasada  <ko1@atdot.net>

	* gc.c: use 2 bits with unsigned int for rb_objspace::flags::mode
	  because it always returns 0 to 2 (non-negative value).
